--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
         <title>Batsy's Page</title>
     <style>
         section {
@@ -22,6 +23,7 @@
         <div class="container-xl">
             <a href="#intro" class="navbar-brand">
                 <span class="fw-bold text-secondary">
+                    <i class="bi bi-house-fill"></i>
                     Homepage
                 </span>
             </a>
@@ -43,7 +45,7 @@ aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <a href="#Review" class="nav-link">Reviews</a>
             </li>
             <li class="nav-items">
-                <a href="#Contact me" class="nav-link">Get in Touch</a>
+                <a href="#Contact-me" class="nav-link">Get in Touch</a>
             </li>
             <li class="nav-items d-md-none">
                 <a href="#Pricing" class="nav-link">Pricing</a>
@@ -65,10 +67,10 @@ aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="display-5 text-muted">Your React Web Tutor</div>
                 </h1>
                 <p class="lead my-4 text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est officia veniam doloremque, iusto quasi illo officiis totam architecto a beatae! Rerum asperiores voluptas error deserunt similique earum exercitationem, ducimus distinctio.</p>
-                <a href="#Pricing" class="btn btn-secondary btn-lg">Contact Me</a>
+                <a href="#Contact-me" class="btn btn-secondary btn-lg">Contact Me</a>
             </div>
             <div class="col-md-5 text-center d-none d-md-block">
-                <img class=img-fluid src="/assets/FB_IMG_1629405986921.jpg" alt="batsy">
+                <img class=img-fluid src="/assets/IMG-20220425-WA0033.jpg" alt="batsy">
             </div>
         </div>
     </div>
@@ -81,7 +83,6 @@ aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
             <p class="lead text-muted">Choose a pricing plan that suits you.</p>
         </div>
     </div>
-
 
 <div class="row my-5 align-items-center justify-content-center g-2">
     <div class="col-8 col-lg-4 col-xl-3">
@@ -126,16 +127,166 @@ aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
 </section>
 
 <!--Topics at a Glance-->
-<section id="reviews">
+<section id="Review">
     <div class="container-md">
         <div class="text-center">
             <h2>Inside my tutorials...</h2>
             <p class="lead text-muted">A quick reviews about the tutorials.</p>
         </div>
     </div>
+
+
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Introduction to Variables
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Introduction to Document Object Oriented in JavaScript
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Introduction to React Variables
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          </div>
+        </div>
+      </div>
 </section>    
 
-<!--Socials-->
+<!--Testimonials-->
+<section class="bg-light" id="testimonial">
+    <div class="container-lg">
+        <div class="text-center">
+            <h2><i class="bi bi-stars"></i>Tutorials reviews</h2>
+            <p class="lead">What my studetns said about the tutorials</p>
+        </div>
+        <div class="row justify-content-center my-5">
+            <div class="col-lg-8">
+                <div class="list-group">
+                    <div class="list-group-item py-3">
+                        <div class="pb-2">
+                            <p class="h6">Rating:<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></p>
+                        </div>
+                         <h5 class="mb-1">A must for aspiring web dev</h5>
+                         <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, facilis. Omnis neque inventore debitis nesciunt fuga provident quod in, vitae repellendus quis? Iste perspiciatis minus vitae recusandae rerum ea itaque.</p>
+                         <small>Review by Demola</small>   
+                    </div>
+
+                    <div class="list-group-item py-3">
+                        <div class="pb-2">
+                            <p class="h6">Rating:<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></p>
+                        </div>
+                        <h5 class="mb-1">A must for aspiring web dev</h5>
+                        <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, facilis. Omnis neque inventore debitis nesciunt fuga provident quod in, vitae repellendus quis? Iste perspiciatis minus vitae recusandae rerum ea itaque.</p>
+                        <small>Review by Moshood</small>   
+                   </div>
+
+                   <div class="list-group-item py-3">
+                    <div class="pb-2">
+                        <p class="h6">Rating:<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half"></i></p>
+                    </div>
+                    <h5 class="mb-1">A must for aspiring web dev</h5>
+                    <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, facilis. Omnis neque inventore debitis nesciunt fuga provident quod in, vitae repellendus quis? Iste perspiciatis minus vitae recusandae rerum ea itaque.</p>
+                    <small>Review by Bisi</small>   
+               </div>
+
+               <div class="list-group-item py-3">
+                <div class="pb-2">
+                    <p class="h6">Rating:<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i></p>
+                </div>
+                <h5 class="mb-1">A must for aspiring web dev</h5>
+                <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, facilis. Omnis neque inventore debitis nesciunt fuga provident quod in, vitae repellendus quis? Iste perspiciatis minus vitae recusandae rerum ea itaque.</p>
+                <small>Review by Emmy</small>   
+           </div>
+
+           <div class="list-group-item py-3">
+            <div class="pb-2">
+                <p class="h6">Rating:<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half"></i></p>
+            </div>
+            <h5 class="mb-1">A must for aspiring web dev</h5>
+            <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, facilis. Omnis neque inventore debitis nesciunt fuga provident quod in, vitae repellendus quis? Iste perspiciatis minus vitae recusandae rerum ea itaque.</p>
+            <small>Review by Trophy</small>   
+            </div>
+                </div>
+            </div>             
+        </div>
+    </div>
+</section>
+<!--Contact Form-->
+<section id="Contact-me">
+    <div class="container-lg">
+        <div class="text-center ">
+            <h2>Get in Touch</h2>
+            <p class="lead">Questions you wanna ask me? Fill out the form to contact me directly</p>
+        </div>
+
+        <div class="row justify-content-center">
+
+            <div class="col-lg-6">
+                <form>
+                    <label for="email" class="label-form">Email address:</label>
+                    <div class="mb-4 input-group">
+                        <span class="input-group-text">
+                            <i class="bi bi-envelope-fill"></i>
+                        </span>
+                    <input type="email" class="form-control" id="email" placeholder="e.g. Batsy@example.com">
+                </div> 
+
+                    <label for="name" class="label-form">Name:</label>
+                    <div class="mb-4 input-group">
+                        <span class="input-group-text">
+                            <i class="bi bi-person"></i>
+                        </span>
+                    <input type="text" class="form-control" id="name" placeholder="e.g. Batsy">
+                    </div>
+
+                    <label for="subject" class="label-form">What is your question about?</label>
+                    <div class="mb-4 input-group">
+                        <span class="input-group-text">
+                            <i class="bi bi-chat-right-dots-fill"></i>
+                        </span>
+                    <select class="form-select" aria-label="subject">
+                        <option selected>Open this select menu</option>
+                        <option value="Pricing">Pricing Query</option>
+                        <option value="Content">Contents Query</option>
+                        <option value="accessibilty">Accessibility Query</option>
+                        <option value="others">Others</option>
+                      </select>
+                    </div>
+                    
+                      <div class="form-floating mt-4 mb-5">
+                      <textarea id="query" class="form-control" style="height:160px"></textarea>
+                      <label for="query">Your query....</label>
+                    </div>
+
+                    <div class="mt-2 text-center">
+                         <button type="submit" class="btn btn-secondary">Submit</button>
+                    </div>
+
+
+                </form>
+            </div>
+        </div>
+    </div>
+
+</section>
 
 
 <!--Footer-->
